@@ -1,5 +1,10 @@
 2005-01-11 Bart Hakvoort  <hakvoort@cvs.gnome.org>
 
+	* include/Utils.h: used static_cast<> instead of C-style type conversion.
+	* src/Makefile.am: install gparted binary in bin/ instead of sbin/ (as soon as i've time i want to implement a read-only modus)
+
+2005-01-11 Bart Hakvoort  <hakvoort@cvs.gnome.org>
+
 	* src/Win_GParted.cc: activate_convert used old filesystem instead of new one for checks. fixed.
 
 2005-01-09 Bart Hakvoort  <hakvoort@cvs.gnome.org>
